--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
+  background-color: #2e2e2e;
+  color: white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.App h1 {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+legend {
+  font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0.9375rem;
+}
+
+input {
+  border-radius: 20px;
+  background: #191919;
+  color: #888;
+  font-size: 1.3rem;
+  font-weight: 300;
+  text-align: center;
+  width: 100%;
+  max-width: 400px;
+  height: 50px;
+  outline: none;
+}
+
+input:focus {
+  color: #fff;
 }
